--- a/Style.css
+++ b/Style.css
@@ -1,21 +1,83 @@
+html {
+    scroll-behavior: smooth;
+}
+#About {
+    display:flex;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: rgb(0, 0, 0);
+
+}
+
+#Career {
+    display:flex;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: rgb(0, 0, 0);
+}
 body {
-    background-color: rgb(236, 231, 231);
+    background-size: cover;
+    font-family: Arial;
+    color: white;
+    margin: 0;
+    padding: 0;
 }
 
-#skills #experience {
-    text-align: center;
+
+
+section {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.body {
-    text-align: center;
+section:nth-child(odd) {
+    background: #ccc;
 }
 
-.ProfilePic {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-      }
+
+Ul {
+    width: 100%;
+    background: #000;
+    height: 50px;
+    margin: 10;
+    padding-left: 20;
+    display: flex;
+    justify-content: center;
+    position: fixed
+ }
 
 
+ul li {
+   float: center;
+   width: 200px;
+   height: 40px;
+   background-color: 000;
+   opacity: 20;
+   line-height: 40px;
+   text-align: center;
+   font-size: 18px;
+   margin-right: 2px;
+   list-style: none;
 }
+
+ul li a {
+    color: #fff;
+    line-height: 50px;
+    box-sizing: border-box;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+     color: white;
+     display: block;
+    }
+
+ul li a:hover {
+    background-color: red;
+}
+
+
+
+
+
